2006-09-19  Paul Brook  <paul@codesourcery.com>

	PR target/28516
	* config/arm/arm.c (arm_unwind_emit_set): Handle reg = sp + const.

2006-09-17  Zdenek Dvorak <dvorakz@suse.cz>

	PR tree-optimization/28887
	* tree-ssa-loop-prefetch.c (analyze_ref): Strip nonaddressable
	component parts from the reference.
	(gather_memory_references_ref): Record the reference without the
	nonaddressable component parts.

2006-09-17  Steven Bosscher  <steven@gcc.gnu.org>

	PR c/25993
	* c-opts.c (c_common_handle_option): Ignore the -std options
	if the input language is assembly.

2006-09-17  Ira Rosen  <irar@il.ibm.com>

	PR tree-opt/21591
	* tree-data-ref.c (ptr_decl_may_alias_p): Look for the name memory
	tag first.
	(ptr_ptr_may_alias_p): Likewise.
	(record_record_differ_p): New function.
	(base_object_differ_p): Call record_record_differ_p.

2006-09-16  Andrew Pinski  <pinskia@physics.uc.edu>

	PR tree-opt/29059
	* tree-ssa-propagate.c (set_rhs): Reject MODIFY_EXPR right
	away for the expr argument.

2006-09-16  Steven Bosscher  <steven@gcc.gnu.org>

	PR tree-opt/27742
	* tree-vectorizer.c (vectorize_loops): Clear vect_loop_location
	before using it for dumping after vectorizing loops.

2006-09-16  Andrew Pinski  <pinskia@physics.uc.edu>
	    Jack Howarth  <howarth@bromo.med.uc.edu>

	PR target/29030
	* config/rs6000/rs6000.c (rs6000_darwin64_record_arg_advance_recurse)
	skip on error_mark_node.
	(rs6000_darwin64_record_arg_recurse): Likewise.

2006-09-16  Steven Bosscher  <steven@gcc.gnu.org>

	* rtl.h (LABEL_OUTSIDE_LOOP_P): Remove.
	* doc/rtl.texi: Remove related documentation.

2006-09-16  Bernd Schmidt  <bernd.schmidt@analog.com>

	* loop-doloop.c (doloop_optimize): Remove bogus arg from debugging
	printf.

2006-09-15  Jim Wilson  <wilson@specifix.com>

	* config/ia64/ia64.c (ia64_legitimate_constant_p, cast CONST):
	Handle symbol offsets same as they are handled in ia64_expand_move
	and move_operand.

2006-09-16  Andreas Tobler  <a.tobler@schweiz.org>
